fix(ui): screen scrollbar stable shift

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -148,6 +148,5 @@
   }
   html {
     @apply font-sans;
-    scrollbar-gutter: stable;
   }
 }
